test/bad/generics/call06.px

func f<A>(A->A g) def
    return

f(sign)
